--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</ul>
 		</nav>
 	</header>
-	<main class='container'>
+	<main class="container">
 		<div class="index-main-pic">
 			<img src="img/ind/index-main-group.jpg" width='1200' height="773" alt='Welcome to the gorgeous Sedona. Because the Grand Canyon sucks'>
 			<!-- Свойство :after для полигона -->
@@ -63,27 +63,31 @@
 					</div>
 				<img src="img/ind/reason-number-2.jpg" width="800" alt="Фото моста дьявола">
 			</div>
-			<div class="reasons-info left">
+			<div class="reasons-container">
+			<div class="reasons-info reasons-wrapper">
 				<h2 class="reasons-name">Небольшая площадь</h2>
 				<p class="reasons-number">— №3 —</p>
 				<p class="reasons-description">Все достопримечательности находятся очень близко</p>
 			</div>
-			<div class="reasons-info center">
+			<div class="reasons-info reasons-wrapper">
 				<h2 class="reasons-name">Красивая дорога</h2>
 				<p class="reasons-number">— №4 —</p>
 				<p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
 			</div>
-			<div class="reasons-info right">
+			<div class="reasons-info reasons-wrapper">
 				<h2 class="reasons-name">Мало туристов</h2>
 				<p class="reasons-number">— №5 —</p>
 				<p class="reasons-description">Большинство едет в гранд каньон и толпится там</p>
+			</div>
 			</div>
 		</section>
 		<section class="travel-search">
 			<div class="travel-search-form">
 				<img src="img/ind/map.jpg" width="1200" alt="Город Седона на карте">
+				<div class="form-wrapper">
 				<b>Заинтересовались?</b>
 				<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+			</div>
 				<div class="main-form">
 					<button class="button travel-search-button">Поиск гостиницы в Седоне</button>
 					<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -123,6 +127,7 @@
 		</section>
 	</main>
 	<footer class="main-footer">
+
 		<a href="#" class="sedona-hashtag">#visitsedona</a>
 		<ul>
 			<li><a class="social-button" href="#">Твиттер</a></li>
@@ -134,6 +139,7 @@
 			<a class="redirection-htmlacademy" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" width='115' height="41"
 				 alt='Лого htmlacademy'></a>
 		</p>
+
 	</footer>
 </body>
 
