--- a/hotels.html
+++ b/hotels.html
@@ -23,74 +23,85 @@
             </ul>
         </nav>
     </header>
-    <main class="hotels-container">
+    <main class="container">
         <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
         <section class="search-filters">
             <form class="filter" method="post" action="https://echo.htmlacademy.ru">
-                <fieldset>
-                    <legend>Инфраструктура:</legend>
-                    <ul>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input" type="checkbox" name="swimming-pool" id="filter-swimming-pool"
-                                checked>
-                            <label for="filter-swimming-pool">Бассейн</label>
-                        </li>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input" type="checkbox" name="parking" id="filter-parking">
-                            <label for="filter-parking">Парковка</label>
-                        </li>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input"  type="checkbox" name="wi-fi" id="filter-wi-fi">
-                            <label for="filter-wi-fi">Wi-fi</label>
-                        </li>
-                    </ul>
-                </fieldset>
-                <fieldset>
-                    <legend>Тип жилья:</legend>
-                    <ul>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input" type="checkbox" name="hotel" id="filter-hotel" checked>
-                            <label for="filter-hotel">Гостиница</label>
-                        </li>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input" type="checkbox" name="motel" id="filter-motel" checked>
-                            <label for="filter-motel">Мотель</label>
-                        </li>
-                        <li class="filter-parameter">
-                            <input class="visually-hidden filter-input" type="checkbox" name="apartments" id="filter-apartments"
-                                checked>
-                            <label for="filter-apartments">Апартаменты</label>
-                        </li>
-                    </ul>
-                </fieldset>
-                <fieldset>
-                    <legend>Стоимость в сутки (р):</legend>
-                    <label class="visually-hidden" for="left-button-range">Левый ползунок</label>
-                    <input type="button" class="left-range" id="left-button-range"></button>
-                    <label class="visually-hidden" for="right-button-range">Правый ползунок</label>
-                    <input type="button" class="right-range" id="right-button-range"></button>
-                    <label for="min-price-value"></label>
-                    <input type="number" id="min-price-value" name="min-price" value="0" min="0" max="3000">
-                    <label for="max-price-value"></label>
-                    <input type="number" id="max-price-value" name="max-price" value="2000" min="0" max="3000">
-                </fieldset>
-                <button type="submit" class="filter-button button">Показать</button>
+                <div>
+                    <fieldset>
+                        <legend>Инфраструктура:</legend>
+                        <ul>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="swimming-pool" id="filter-swimming-pool" checked>
+                                <label for="filter-swimming-pool">Бассейн</label>
+                            </li>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="parking" id="filter-parking">
+                                <label for="filter-parking">Парковка</label>
+                            </li>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="wi-fi" id="filter-wi-fi">
+                                <label for="filter-wi-fi">Wi-fi</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                </div>
+                <div>
+                    <fieldset>
+                        <legend>Тип жилья:</legend>
+                        <ul>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="hotel" id="filter-hotel" checked>
+                                <label for="filter-hotel">Гостиница</label>
+                            </li>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="motel" id="filter-motel" checked>
+                                <label for="filter-motel">Мотель</label>
+                            </li>
+                            <li class="filter-parameter">
+                                <input class="visually-hidden filter-input" type="checkbox" name="apartments" id="filter-apartments" checked>
+                                <label for="filter-apartments">Апартаменты</label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                </div>
+                <div>
+                    <fieldset>
+                        <legend>Стоимость в сутки (р):</legend>
+                        <label class="visually-hidden" for="left-button-range">Левый ползунок</label>
+                        <input type="button" class="left-range" id="left-button-range"></button>
+                        <label class="visually-hidden" for="right-button-range">Правый ползунок</label>
+                        <input type="button" class="right-range" id="right-button-range"></button>
+                        <label for="min-price-value"></label>
+                        <input type="number" id="min-price-value" name="min-price" value="0" min="0" max="3000">
+                        <label for="max-price-value"></label>
+                        <input type="number" id="max-price-value" name="max-price" value="2000" min="0" max="3000">
+                    </fieldset>
+                    <button type="submit" class="filter-button button">Показать</button>
+                </div>
             </form>
         </section>
+
         <section class="search-results">
-            <h2 class="search-results-number">Найдено: 3</h2>
-            <p>Сортировка:</p>
-            <ul class="sorting-parameters">
-                <li><a class="sorting-parameter price current" href="#">По цене</a></li>
-                <li><a class="sorting-parameter type" href="#">По типу</a></li>
-                <li><a class="sorting-parameter rating" href="#">По рейтингу </a></li>
-            </ul>
-            <ul class="sorting-order">
-                <li><a class="sorting-order-descending default" href="#">По убыванию</a></li>
-                <li><a class="sorting-order-ascending" href="#">По возрастанию</a></li>
-            </ul>
-            <ul class="found-hotels-results">
+            <div class="search-container">
+                <div class="search-items">
+                    <h2 class="search-results-number">Найдено: 3</h2>
+                    <p>Сортировка:</p>
+                    <ul class="sorting-parameters">
+                        <li><a class="sorting-parameter price current" href="#">По цене</a></li>
+                        <li><a class="sorting-parameter type" href="#">По типу</a></li>
+                        <li><a class="sorting-parameter rating" href="#">По рейтингу </a></li>
+                    </ul>
+                </div>
+                <ul class="sorting-order">
+                    <li><a class="sorting-order-descending default" href="#">По убыванию</a></li>
+                    <li><a class="sorting-order-ascending" href="#">По возрастанию</a></li>
+                </ul>
+            </div>
+            <ul class="found-hotels-results">                
                 <li class="found-hotel">
+                    <div class="inner-item-hotel">
+                        <div class="hotel-wrapper">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
                             <img src="img/hotels/hotel-1.png" width="135" height="90" alt="Фото отеля Amara Resort & Spa">
@@ -104,12 +115,16 @@
                         <a class="details-button" href="found-hotel-details.html">Подробнее</a>
                         <a class="button reserve-button" href="#">Забронировать</a>
                     </div>
+                    </div>
                     <div class="found-hotel-ratings">
                         <img src="img/star.svg" width="18" height="17" alt="4 звезды">
                         <p>Рейтинг: 8,5</p>
                     </div>
+                </div>
                 </li>
                 <li class="found-hotel">
+                        <div class="inner-item-hotel">
+                                <div class="hotel-wrapper">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
                             <img src="img/hotels/hotel-2.png" width="135" height="90" alt="Фото отеля Desert Quail Inn">
@@ -123,12 +138,17 @@
                         <a class="details-button" href="found-hotel-details.html">Подробнее</a>
                         <a class="button reserve-button" href="#">Забронировать</a>
                     </div>
+                    </div>
                     <div class="found-hotel-ratings">
                         <img src="img/star.svg" width="18" height="17" alt="3 звезды">
                         <p>Рейтинг: 8,9</p>
                     </div>
+                    </div>
+            
                 </li>
                 <li class="found-hotel">
+                    <div class="inner-item-hotel">
+                            <div class="hotel-wrapper">
                     <p class="found-hotel-image">
                         <a href="found-hotel.html">
                             <img src="img/hotels/hotel-3.png" width="135" height="90" alt="Фото отеля Villas at Poco Diablo">
@@ -142,13 +162,16 @@
                         <a class="details-button" href="found-hotel-details.html">Подробнее</a>
                         <a class="button reserve-button" href="#">Забронировать</a>
                     </div>
+                    </div>
                     <div class="found-hotel-ratings">
                         <img src="img/star.svg" width="18" height="17" alt="2 звезды">
                         <p>Рейтинг: 9,2</p>
                     </div>
+                    </div>
                 </li>
             </ul>
         </section>
+
     </main>
     <footer class="main-footer">
         <a href="#" class="sedona-hashtag">#visitsedona</a>
