--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<header class='main-header'>
 		<a class="main-header-logo" href="#">
-			<img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
+			<img src="img/logo-sedona.svg" width='140' height="71" alt='Лого города Седона'>
 		</a>
-		<nav class='main-navigation'>
+		<nav class='header-navigation'>
 			<ul class='main-navigation'>
 				<li><a href='info.html'>Информация</a></li>
 				<li><a href='media.html'>Фото и видео</a></li>
@@ -26,9 +26,9 @@
 	<main class="container">
 		<div class="index-main-pic">
 			<img src="img/ind/index-main-group.jpg" width='1200' height="773" alt='Welcome to the gorgeous Sedona. Because the Grand Canyon sucks'>
-			<!-- Свойство :after для полигона -->
 		</div>
 		<div class="index-wrapper">
+		<div class="main-slogan-wrapper">
 			<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 		</div>		
@@ -125,6 +125,7 @@
 				</div>
 			</div>
 		</section>
+	</div>
 	</main>
 	<footer class="main-footer">
 
