--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
 	</header>
 	<main class="container">
 		<div class="index-main-pic">
-
-
+			<img src="img/welcome.	png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title">
 		</div>
-
 			<div class="main-slogan-wrapper">
 				<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
 				<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-
 			<section class="reasons-attractions">
 				<div class="reasons-info left">
 					<div class="reasons-wrapper">
