--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			</section>
 		</div>
 	</main>
-	<footer class="main-footer">
+	<footer class="main-footer index-footer">
 		<a href="#" class="sedona-hashtag">#visitsedona</a>
 		<ul>
 			<li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span>
