--- a/hotels.html
+++ b/hotels.html
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="found-hotel-ratings">
-                            <img src="img/star.svg" width="18" height="17" alt="4 звезды">
+                            <b class="four-stars">4 звезды</b>                            
                             <p>Рейтинг: 8,5</p>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <div class="found-hotel-ratings">
-                            <img src="img/star.svg" width="18" height="17" alt="3 звезды">
+                            <b>3 звезды</b>                            
                             <p>Рейтинг: 8,9</p>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                                     </div>
                                 </div>
                                 <div class="found-hotel-ratings">
-                                    <img src="img/star.svg" width="18" height="17" alt="3 звезды">
+                                    <b >2 звезды</b>                            
                                     <p>Рейтинг: 9,2</p>
                                 </div>
                             </div>
