--- a/hotels.html
+++ b/hotels.html
@@ -145,13 +145,12 @@
                             </div>
                         </div>
                         <div class="found-hotel-ratings">
-                            <b>3 звезды</b>                            
+                            <b class="three-stars">3 звезды</b>                            
                             <p>Рейтинг: 8,9</p>
                         </div>
                     </div>
                 </li>
                 <li class="found-hotel">
-
                         <div class="inner-item-hotel">
                                 <div class="hotel-wrapper">
                                     <p class="found-hotel-image">
@@ -169,11 +168,11 @@
                                     </div>
                                 </div>
                                 <div class="found-hotel-ratings">
-                                    <b >2 звезды</b>                            
+                                    <b class="two-stars">2 звезды</b>                            
                                     <p>Рейтинг: 9,2</p>
                                 </div>
                             </div>
-                </li>
+                                        </li>
             </ul>
         </section>
 
