--- a/hotels.html
+++ b/hotels.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="container>
     <header class='main-header'>
         <a class="main-header-logo" href="index.html">
             <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
@@ -23,7 +24,6 @@
             </ul>
         </nav>
     </header>
-    <div class="box-shadow-wrapper">
         <main class="container">
             <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
             <section class="search-filters">
@@ -177,7 +177,7 @@
                 </ul>
             </section>
         </main>
-        <footer class="main-footer">
+        <footer class="main-footer hotels-footer">
             <a href="#" class="sedona-hashtag">#visitsedona</a>
             <ul>
                 <li><a class="social-button" href="#"><span class="visually-hidden">Твиттер</span>
