--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	    <div class="container">
 	<header class='main-header'>
 		<a class="main-header-logo" href="#">
 			<img src="img/logo-sedona.svg" width='140' height="71" alt='Лого города Седона'>
@@ -163,6 +164,7 @@
 			</a>
 		</p>
 	</footer>
+</div>
 </body>
 
 </html>
