--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	    <div class="container">
+	<div class="container">
 	<header class='main-header'>
 		<a class="main-header-logo" href="#">
 			<img src="img/logo-sedona.svg" width='140' height="71" alt='Лого города Седона'>
@@ -24,7 +24,7 @@
 			</ul>
 		</nav>
 	</header>
-	<main class="container">
+	<main>
 		<div class="index-main-pic">
 			<img src="img/welcome.	png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title">
 		</div>
@@ -87,7 +87,7 @@
 						<p><span>Укажите предполагаемые даты поездки,</span> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
 					</div>
 					<div class="map-wrapper">
-						<img src="img/ind/map.jpg" width="1200" height="592" alt="Город Седона на карте">
+						<img src="img/ind/map.jpg" width="1200" height="622" alt="Город Седона на карте">
 						<div class="main-form">
 							<button class="button travel-search-button">Поиск гостиницы в Седоне</button>
 							<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
@@ -165,6 +165,7 @@
 		</p>
 	</footer>
 </div>
+
 </body>
 
 </html>
