--- a/hotels.html
+++ b/hotels.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <div class="container">
     <header class='main-header'>
         <a class="main-header-logo" href="index.html">
             <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-        <main class="container">
+        <main>
             <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
             <section class="search-filters">
                 <form class="filter" method="post" action="https://echo.htmlacademy.ru">
@@ -203,6 +203,7 @@
                 </a>
             </p>
         </footer>
+    </div>
 </body>
 
 </html>
