--- a/hotels.html
+++ b/hotels.html
@@ -11,19 +11,19 @@
 
 <body>
     <div class="container">
-    <header class='main-header'>
-        <a class="main-header-logo" href="index.html">
-            <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
-        </a>
-        <nav class='main-navigation'>
-            <ul class='main-navigation'>
-                <li><a href='info.html'>Информация</a></li>
-                <li><a href='media.html'>Фото и видео</a></li>
-                <li><a href='map.html'>Карта штата</a></li>
-                <li><a class="current-page" href='hotels.html'>Гостиницы</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header class='main-header'>
+            <a class="main-header-logo" href="index.html">
+                <img src="img/logo-sedona.svg" width='140' height="72" alt='Лого города Седона'>
+            </a>
+            <nav class='main-navigation'>
+                <ul class='main-navigation'>
+                    <li><a href='info.html'>Информация</a></li>
+                    <li><a href='media.html'>Фото и видео</a></li>
+                    <li><a href='map.html'>Карта штата</a></li>
+                    <li><a class="current-page" href='hotels.html'>Гостиницы</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
             <h1 class="visually-hidden">Варианты отелей в Седоне</h1>
             <section class="search-filters">
@@ -67,10 +67,9 @@
                         </fieldset>
                     </div>
                     <div>
-                        <fieldset>
-                            <div class="range-wrapper">
+                        <div class="range-wrapper">
+                            <fieldset>
                                 <legend class="filter-range-title">Стоимость в сутки (р):</legend>
-
                                 <div class="price-controls">
                                     <label class="min-price">от <input type="text" name="min-price" value="0"></label>
                                     <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
@@ -83,7 +82,8 @@
                                     <div class="range-toggle range-toggle-max"></div>
                                 </div>
                                 <button type="submit" class="filter-button button">Показать</button>
-                            </div>
+                            </fieldset>
+                        </div>
                     </div>
                 </form>
             </section>
