--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</header>
 	<main>
 		<div class="index-main-pic">
-			<img src="img/welcome.	png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title">
+			<img src="img/welcome.png" alt="Welcome to the gorgeous Sedona. Because the Grand Canyon sucks" class="index-main-title">
 		</div>
 		<div class="main-slogan-wrapper">
 			<h1 class='main-slogan'>Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -106,7 +106,7 @@
 									<p class="search-parameter search-date">
 										<label for="departure-date-field">Дата выезда:</label>
 										<input id="departure-date-field" type="text" name="departure-date" value="" placeholder="4 июля 2017" required>
-										<button class="calendar" id="calendar-arrival"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="21" height="22"
+										<button class="calendar" id="calendar-departure"><svg fill="#FFF" xmlns="http://www.w3.org/2000/svg" width="21" height="22"
 											 viewBox="0 0 21 22">
 												<path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"
 												/>
